plugins {
    id 'java'
    id "io.freefair.lombok" version "6.5.1"
}

group = 'by.kihtenkoolga'
version = '1.0-SNAPSHOT'

java {
    sourceCompatibility = JavaLanguageVersion.of(17)
    targetCompatibility = JavaLanguageVersion.of(17)
}

repositories {
    mavenCentral()
}

ext {
    junitVersion = '5.9.2'
    mockitoVersion = '5.6.0'
}

tasks.withType(Test).configureEach {
    jvmArgs = jvmArgs + ['--add-opens=java.base/java.time=ALL-UNNAMED']
    jvmArgs = jvmArgs + ['--add-opens=java.base/java.util=ALL-UNNAMED']
}

dependencies {

    testImplementation 'com.google.code.gson:gson:2.8.8'
    implementation 'com.fatboyindustrial.gson-javatime-serialisers:gson-javatime-serialisers:1.1.2'

    testImplementation 'org.assertj:assertj-core:3.24.2'
    testImplementation "org.mockito:mockito-junit-jupiter:${mockitoVersion}"
    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
    testImplementation 'org.junit.jupiter:junit-jupiter-params:${junitVersion}'
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
}

test {
    useJUnitPlatform()
}
